Generer egen BehandleArbeidssoeker for arena soap tjeneste for å unngå javax.xml avhengigheter